<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPrimaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/movie_title_padding"
                android:text="@string/details_movie_title"
                android:textSize="@dimen/movie_title_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_movie_poster_details_view"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/details_poster_image_height"
                    android:layout_margin="@dimen/details_poster_image_layout_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_movie_poster" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_5">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_release_date"
                            android:textSize="@dimen/category_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail_movie_release_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_5"
                            android:text="@string/details_release_date"
                            android:textSize="@dimen/details_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category_vote_average"
                            android:textSize="@dimen/category_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail_movie_vote_average"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_5"
                            android:text="@string/details_vote_average"
                            android:textSize="@dimen/details_text_size" />

                    </LinearLayout>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/favorite_details_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/details_margin"
                        android:focusable="true"
                        app:backgroundTint="@color/lightColor"
                        tools:src="@drawable/ic_star_border_black_24dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/plot_synopsis_layout_padding"
                android:paddingTop="@dimen/plot_synopsis_layout_padding"
                android:text="@string/category_plot_synopsis"
                android:textSize="@dimen/category_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_movie_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/plot_synopsis_layout_padding"
                android:text="@string/details_plot_synopsis"
                android:textSize="@dimen/details_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/trailers_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trailer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/trailer_category_name"
                android:textSize="@dimen/category_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/details_margin" />

            <ProgressBar
                android:id="@+id/progress_bar_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <TextView
                android:id="@+id/no_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/category_layout_margin"
                android:text="@string/no_trailers"
                android:textSize="@dimen/category_text_size"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/review_category_name"
                android:textSize="@dimen/category_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/category_layout_margin" />

            <ProgressBar
                android:id="@+id/progress_bar_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <TextView
                android:id="@+id/no_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/category_layout_margin"
                android:text="@string/no_reviews"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>